resources/webidl2/test/invalid/baseline/promise-empty.txt
Syntax error at line 1:
typedef Promise<> empty;
                ^ Missing Promise subtype
